ingress/controllers/citrix-netscaler/example/guestbook/guestbook-allinone.yaml
# Create the redis-master service
#################################
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  labels:
    name: redis-master
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    name: redis-master
---
# Create the redis-slave service
################################
apiVersion: v1
kind: Service
metadata:
  name: redis-slave
  labels:
    name: redis-slave
spec:
  ports:
  - port: 6379
  selector:
    name: redis-slave
---
# Create the frontend service
#############################
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    name: frontend
spec:
  ports:
    - port: 80
  selector:
    name: frontend
