ingress/controllers/citrix-netscaler/example/guestbook/frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-frontend
  annotations: 
     publicIP: "10.217.129.70"
     port: "80"
     protocol: HTTP
spec:
  rules:
  - host: dockercon16.citrix.com
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
